--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -37,6 +37,7 @@ dependencies:
   sqflite: ^2.4.2
   path_provider: ^2.1.5
   provider: ^6.1.2
+  intl: ^0.20.2
 
 dev_dependencies:
   flutter_test:
