--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -38,6 +38,10 @@ dependencies:
   path_provider: ^2.1.5
   provider: ^6.1.2
   intl: ^0.20.2
+  pdf: ^3.10.4
+  printing: ^5.11.0
+  flutter_pdfview: ^1.2.7
+
 
 dev_dependencies:
   flutter_test:
