--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -41,6 +41,7 @@ dependencies:
   pdf: ^3.10.4
   printing: ^5.11.0
   flutter_pdfview: ^1.2.7
+  permission_handler: ^12.0.0+1
 
 
 dev_dependencies:
